# projects-archive

./: README.md
cloud/OCI-CostReport-Elastic/: .gitignore
cloud/OCI-CostReport-Elastic-Metadata/: .gitignore
cloud/OCI-CostReport-Elastic-simple/: .gitignore
cloud/SagemakerJobsObservability/: .gitignore  InstancesUseUSD.csv  LICENCE.md  README.md  requirements.txt
cloud/aws-local-glue-3/: .gitignore  README.md  docker-compose.yml  jupyter_start.sh  notes_deploy.txt  requirements.txt  tracker.jupyterlab-settings
cloud/aws_serverless_pipeline/: .gitignore  README.md  sonar-project.properties  tox.ini
dashboards/Streamlit-CryptoCurrency/: read.md  readme.md  requirements.txt
dashboards/StreamlitLangchainBot/: .flake8
data-science/Python_Data_Analysis/: README.md
flask-web/Anotador-Flask/: .gitignore  README.md
flask-web/Flask-ElasticSearch-Vader/: README.md  requirements.txt
flask-web/Flask_Covid_DataWeb/: .gitignore  manage.py  requirements.txt
flask-web/flask_cuits_administracion/: .gitignore  README.md  requeriments.txt
streaming/ChallengeCoderio/: Dockerfile  docker-compose.yml  readme.md
streaming/KakfkaLearn-ConsumerAPIData/: .gitignore  README.md  docker-compose.yml  exmple_file_env  init.sh  (+1 more)
tools/local_system_monitor/: .dockerignore  .flake8  .gitignore  docker-compose.yml  pyproject.toml  readme.md
tools/local_system_monitor/kafka/: kafka-config.properties
tools/local_system_monitor/pipeline/kafka_producer/: producer.py
tools/local_system_monitor/pipeline/mongo_consumer/: consumer.py
tools/local_system_monitor/test/: app.py
(+321 files in other folders)
